--- a/app/src/main/res/layout/activity_profiledashboard.xml
+++ b/app/src/main/res/layout/activity_profiledashboard.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profiledashboard">
+    tools:context=".profiledashboard"
+    android:background="@drawable/backfor">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/picPost"
@@ -27,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/profile"></ImageView>
+            android:src="@drawable/empty"></ImageView>
 
     </androidx.cardview.widget.CardView>
 
@@ -58,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                diagonal:srcCompat="@drawable/back" />
+                diagonal:srcCompat="@drawable/empty" />
 
             <ImageView
                 android:id="@+id/imageView12"
@@ -96,7 +97,7 @@
             android:fontFamily="sans-serif"
             android:text="Sankalp Srivastava"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="17sp"
             android:textStyle="bold|italic"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -111,29 +112,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Student"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.542"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userNameP"
             app:layout_constraintVertical_bias="0.021" />
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            diagonal:srcCompat="@drawable/ic_baseline_settings_24"
-            tools:layout_editor_absoluteX="361dp"
-            tools:layout_editor_absoluteY="707dp" />
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/userEmailP"
-            diagonal:srcCompat="@drawable/blue"
-            tools:layout_editor_absoluteX="0dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
