--- a/app/src/main/res/layout/activity_profiledashboard.xml
+++ b/app/src/main/res/layout/activity_profiledashboard.xml
@@ -111,7 +111,7 @@
             android:id="@+id/userEmailP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Student"
+            android:text="email"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
